# patchgate

./: .gitignore  .gitmessage.patchgate.txt  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  cspell.json  flake.nix  justfile  mkdocs.yml  phase101_110.md  phase111_120.md  phase121_130.md  phase131_140.md  phase141_150.md  phase151_160.md  phase161_170.md  phase171_180.md  phase181_190.md  phase191_200.md  phase21_30.md  phase31_40.md  phase41_50.md  phase51_60.md  phase61_70.md  phase71_80.md  phase81_90.md  phase91_100.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  dead-letter-replay.yml  ga-readiness.yml  lts-backport.yml  policy-governance.yml  (+8 more)
config/: policy.toml.example  policy.v1.legacy.toml  veto.toml.example
crates/patchgate-cli/: Cargo.toml
crates/patchgate-cli/src/: main.rs
crates/patchgate-cli/tests/: scan_integration.rs
crates/patchgate-cli/tests/fixtures/fork_pr_trust/: README.md  base-policy.toml  overlay-adds-dangerous-glob.toml  overlay-lowers-threshold.toml
crates/patchgate-core/: Cargo.toml
crates/patchgate-core/src/: failure_codes.rs  lib.rs  model.rs  runner.rs
crates/patchgate-core/tests/: runner_integration_flow.rs  scope_mode_boundaries.rs
crates/patchgate-github/: Cargo.toml
crates/patchgate-github/src/: lib.rs
crates/patchgate-github/tests/: publish_contract.rs
docs/: 00_quickstart.md  01_concepts.md  02_config_reference.md  03_cli_reference.md  04_recipes.md  05_troubleshooting.md  06_phase_backcast_1_100.md  07_pr_plan_phase1_10.md  08_pr_plan_phase11_20.md  09_pr_execution_checklist.md  10_phase_backcast_121_plus.md  11_current_state_and_next_steps.md  12_phase101_120_status.md  13_phase151_200_backcast.md  15_provider_rollout_checklist.md  16_v2_migration_guide_alpha.md  17_fleet_ops_review_packet.md  18_v2_candidate_release_checklist.md  19_v2_ops_handbook.md  20_phase201_plus_backcast.md  21_v1_sunset_notice.md  22_v2_support_model.md  23_siem_handoff_reference.md  24_v11_freeze_boundary.md  25_v2_ga_go_no_go.md  26_plugin_trust.md  99_release_checklist.md  ARCHITECTURE.md  Jenkinsfile.patchgate  PRECOMMIT.md  ROADMAP.md  SECURITY.md  patchgate-action.yml  patchgate-github-trust-template-v1.yml  patchgate-gitlab-ci.yml  promptbook.md  trust-boundary.md
sdk/: README.md
(+60 files in other folders)
