[package]
name = "patchgate-core"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
globset = "0.4"
sha2 = "0.10"
patchgate-config = { path = "../patchgate-config" }
